# mdaq-samples

./: .gitignore  README.md  README.org
caen-adcs-sis3100/: Makefile  README-old.txt  adcraw.cpp  cv560.c  cv560.h  cvadcana.cpp  cvadcexp.h  cvadcfe.c  default.xml  experim.h  exptab  mdaq.yaml  odbinit.txt  vadc_caen.c  vadc_caen.h
events-sim/: .gitignore  00README.txt  CMakeLists.txt  Doxyfile  Makefile  adccalib.cpp  adcsum.cpp  ana4evt.cpp  analyzer.cpp  analyzer.h  build_try.sh  daq.conf  daq_env.sh  evtgen.cpp  evtgen.h  experim.h  exptab  frontend.c  mdaq.yaml  pdfs.c  readme.txt  scaler.c  template.c  try_evtgen.c
mdaq-start/: Makefile  a.sh  exptab  mdaq.yaml  mdaq.yaml-old  run.sh  start.sh  tt.py
